# entity-linker

./: .gitignore  README.md
.claude-plugin/: marketplace.json
.claude/rules/: entity-linker-conventions.md  entity-linker-mcp-servers.md  entity-linker-project.md
.omc/state/: last-tool-error.json
agents/: entity-resolver.md
commands/: catalog-import.md  entity-search.md  entity-stats.md  link-folder.md
docs/examples/: entities.seed.yml  sample-email.eml  sample-standup.md
docs/plans/: 2026-04-23-entity-linker-plugin.md
mcp-server/: pyproject.toml
mcp-server/apps/: README.md
mcp-server/apps/disambiguation/: package-lock.json  package.json
mcp-server/apps/disambiguation/src/: App.test.tsx  App.tsx  main.tsx  types.ts
mcp-server/apps/disambiguation/src/components/: SpanCard.tsx
mcp-server/apps/shared/src/: mcp-app-bridge.ts
mcp-server/apps/staging/: index.html  package-lock.json
mcp-server/apps/staging/src/: App.test.tsx  App.tsx
mcp-server/src/entity_db/: __init__.py  __main__.py  db.py  elicit.py  resources.py  schema.sql  server.py
mcp-server/src/entity_db/matching/: __init__.py  index.py  normalize.py  resolver.py
mcp-server/src/entity_db/preprocess/: __init__.py  asr.py  detect.py  email.py  html.py
mcp-server/src/entity_db/tools/: __init__.py  app_staging.py  catalog.py  pending.py  staging.py
mcp-server/tests/: conftest.py  test_app_disambiguation.py  test_app_staging.py  test_coref.py  test_db.py  test_index.py  test_render.py  test_server.py  test_type_fit.py
plugins/entity-linker/: .mcp.json  README.md
(+72 files in other folders)
