[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "entity-db"
version = "0.1.0"
description = "Entity resolution MCP server for the entity-linker plugin"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2,<4",
    "pydantic>=2.5,<3",
    "abydos>=0.5.0,<0.6",
    "rapidfuzz>=3.6,<4",
    "pyyaml>=6.0,<7",
]

[project.scripts]
entity-db = "entity_db.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/entity_db"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["entity_db"]
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "anyio[trio]>=4.0",
]
